tests/baselines/reference/nullishCoalescingOperator7.errors.txt
nullishCoalescingOperator7.ts(5,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '1 | 2'.
nullishCoalescingOperator7.ts(6,7): error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '1 | 2'.


==== nullishCoalescingOperator7.ts (2 errors) ====
    declare const a: string | undefined;
    declare const b: string | undefined;
    declare const c: string | undefined;
    
    const foo1 = a ? 1 : 2;
          ~~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '1 | 2'.
    const foo2 = a ?? 'foo' ? 1 : 2;
          ~~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'number' or '1 | 2'.
    const foo3 = a ?? 'foo' ? (b ?? 'bar') : (c ?? 'baz');
    
    function f () {
        const foo4 = a ?? 'foo' ? b ?? 'bar' : c ?? 'baz';
    }
    